--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Jacquard+12&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
-html, body {
-    height: 100%;
+
+html {
+    scroll-behavior: smooth;
 }
+
 
 
 
