--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Jacquard+12&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
+@font-face {
+    font-family: 'Abocat';
+    src: url('/Downloads/abocat-font/Abocat-WppKO.ttf') format ('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 html {
     scroll-behavior: smooth;
 }
 
-
+body {
+    font-family: 'Abocat', sans-serif;
+}
 
 
 
